--- a/styles/Index.module.scss
+++ b/styles/Index.module.scss
@@ -3,8 +3,7 @@
   flex-direction: column;
   height: 100vh;
   width: 100%;
-  background-color: #167740;
-  color: white;
+  color: #084221;
 
   h1 {
     text-align: center;
@@ -18,9 +17,9 @@
 
   a {
     border-radius: 50px;
-    background: linear-gradient(145deg, #146b3a, #187f44);
-    box-shadow:  20px 20px 60px #136536,
-                -20px -20px 60px #19894a;
+    background: linear-gradient(145deg, #e6e6e6, #ffffff);
+    box-shadow:  18px 18px 36px #d1d1d1,
+                -18px -18px 36px #ffffff;
     padding: 0.7em 1.7em;
 
     &.right {
