fix: waves positions

--- a/styles/Index.module.scss
+++ b/styles/Index.module.scss
@@ -2,6 +2,7 @@
   @apply flex flex-col h-screen w-full;
   background-color: #167740;
   color: white;
+  position: relative;
 
   h1 {
     text-align: center;
