--- a/components/navbar/navbar.module.scss
+++ b/components/navbar/navbar.module.scss
@@ -1,36 +1,17 @@
 nav.nav {
   background: #167740;
-  color: white;
+  @apply text-white md:w-screen py-4 px-8;
 
   ul {
+    @apply md:flex justify-evenly;
     li {
+      @apply md:py-3 px-0;
       a {
-        width: 100%;
-        height: 100%;
+        @apply w-full h-full md:py-3 px-7;
         border-radius: 50px;
         background: linear-gradient(145deg, #146b3a, #187f44);
         box-shadow:  5px 5px 15px #136536,
                     -5px -5px 15px #19894a;
-      }
-    }
-  }
-}
-
-@media screen and (min-width: 600px) {
-  nav.nav {
-    width: 100vw;
-    padding: 1rem 2rem;
-  
-    ul {
-      display: flex;
-      justify-content: space-evenly;
-  
-      li {
-        padding: .8rem 0;
-  
-        a {
-          padding: 0.7em 1.7em;
-        }
       }
     }
   }
