style: page title

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,3 +9,11 @@ body {
   font-family: 'Roboto', sans-serif;
   background-color: #167740
 }
+
+h1 {
+  @apply text-4xl font-bold text-white;
+}
+
+h1.page-title {
+  @apply text-center mt-3;
+}
