--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,14 @@ h1 {
   @apply text-4xl font-bold text-white;
 }
 
+h2 {
+  @apply text-3xl font-bold text-white;
+}
+
+h3 {
+  @apply text-2xl font-bold text-white;
+}
+
 h1.page-title {
-  @apply text-center mt-3;
+  @apply text-center mt-3 mb-3;
 }
