--- a/styles/Index.module.scss
+++ b/styles/Index.module.scss
@@ -1,79 +1,21 @@
+.home {
+  button,
+  a {
+    background-color: #1fa057;
+    @apply text-white py-1 px-2 rounded-md;
+    box-shadow: #e1e14ad3 -5px 5px;
+  }
+}
+
 .main {
   @apply flex flex-col h-screen w-full overflow-hidden;
   background-color: #167740;
   color: white;
   position: relative;
 
-  h1 {
-    text-align: center;
-    font-size: 3rem;
-  }
-
-  img.profile {
-    border-radius: 13rem 13rem 0 0;
-    margin-top: 3rem;
-  }
-
-  a {
-    border-radius: 50px;
-    background: linear-gradient(145deg, #146b3a, #187f44);
-    box-shadow:  20px 20px 60px #136536,
-                -20px -20px 60px #19894a;
-    padding: 0.7em 1.7em;
-
-    &.right {
-      margin-right: 8rem;
-    }
-
-    &.left {
-      margin-left: 8rem;
-    }
-  }
-
-  .link_list {
-    @apply flex flex-col w-1/3 h-3/4 justify-evenly items-center;
-  }
-
-  .ocean { 
-    height: 0;
-    width:100%;
-    position:absolute;
-    bottom:-10px;
-    left:0;
-    // background: #167740;
-  }
-  
-  .wave {
-    background: url(/wave.svg) repeat-x;
-    position: absolute;
-    top: -130px;
-    width: 6400px;
-    height: 130px;
-    animation: wave 7s cubic-bezier( 0.36, 0.45, 0.63, 0.53) infinite;
-    transform: translate3d(0, 0, 0);
-  
-    &:nth-of-type(2) {
-      top: -175px;
-      animation: wave 7s cubic-bezier( 0.36, 0.45, 0.63, 0.53) -.125s infinite, swell 7s ease -1.25s infinite;
-      opacity: 1;
-    }
-  }
-  
-  @keyframes wave {
-    0% {
-      margin-left: 0;
-    }
-    100% {
-      margin-left: -1600px;
-    }
-  }
-  
-  @keyframes swell {
-    0%, 100% {
-      transform: translate3d(0,-25px,0);
-    }
-    50% {
-      transform: translate3d(0,5px,0);
+  .header {
+    a {
+      @apply text-white mr-3 p-1 rounded-md border-2 border-green-400;
     }
   }
 }
