feat: set some styles for pages and add navbar

--- a/styles/Index.module.scss
+++ b/styles/Index.module.scss
@@ -1,9 +1,4 @@
-$background: #021109;
-$primary: #0a3d20;
-$secondary: #116134;
-$tertiary: #167740;
-$quaternary: #1c9d54;
-$quinary: #21c267;
+@import 'variables.scss';
 
 .home {
   button,
